# peas-agent-core

./: .gitignore  README.md  pyproject.toml
examples/: main.py
src/peas_agent/: __init__.py  builtin_web.py  chat_activity.py  cli.py  core.py  dream.py  dream_runner.py  dream_scheduler.py  git_store.py  llm_content.py  memory_archive.py  memory_store.py  memory_summary.py  prompt_templates.py  tools_loader.py
src/peas_agent/builtin_skills/always-on/: SKILL.md
src/peas_agent/builtin_skills/felo-cli/: SKILL.md
src/peas_agent/builtin_skills/felo-cli/references/: api-contract.md  workflow.md
src/peas_agent/builtin_skills/skill-creator/: SKILL.md
src/peas_agent/lobby/: __init__.py  cli.py  mentions.py  netutil.py  paths.py  protocol.py
src/peas_agent/lobby/runner/: __init__.py  client.py  format.py
src/peas_agent/lobby/server/: __init__.py  app.py  registry.py  room.py  storage.py
src/peas_agent/lobby/server/admin/templates/: index.html  room.html
src/peas_agent/prompts/: consolidator_archive.md  dream_phase1.md  dream_phase2.md
src/peas_agent/security/: __init__.py
src/peas_agent/templates/: AGENTS.md  SOUL.md  USER.md
src/peas_agent/templates/agent/: identity.md  platform_policy.md  tool_contract.md
src/peas_agent/templates/tools/example_calc/: tool.py
tests/: lobby_helpers.py  test_agent_memory_store.py  test_config_path_isolation.py  test_cross_session_archive.py  test_dream.py  test_dream_llm_isolation.py  test_dream_runner.py  test_dream_scheduler_defer.py  test_git_store.py  test_import_side_effects.py  test_llm_content.py  test_lobby_admin_ws.py  test_lobby_delete.py  test_lobby_enqueue.py  test_lobby_format.py  test_lobby_mentions.py  test_lobby_netutil.py  test_lobby_paths.py  test_lobby_room.py  test_lobby_runner.py  test_lobby_scheduler.py  test_lobby_start.py  test_lobby_storage.py  test_lobby_ws.py  test_memory_store.py  test_memory_store_threading.py  test_project_root_tools.py  test_read_image.py  test_recent_history.py  test_reload_llm_config.py  test_responses_api.py  test_system_prompt.py  test_tools_loader.py  test_web_fetch.py  test_web_search.py  test_workspace.py
