[project]
name = "peas-agent-core"
version = "0.2.2"
description = "PEAS Agent Core — LangChain ReAct agent with workspace, memory, and skills"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.5.5",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=1.1.13",
    "readability-lxml>=0.8.4",
]

[project.scripts]
peas-agent = "peas_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peas_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
