[project]
name = "peas-agent-core"
version = "0.3.0"
description = "PEAS Agent Core — LangChain ReAct agent with workspace, memory, and skills"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.5.5",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=1.1.13",
    "readability-lxml>=0.8.4",
]

[project.optional-dependencies]
lobby = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
peas-agent = "peas_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peas_agent"]

[tool.hatch.build.targets.wheel.force-include]
"src/peas_agent/lobby/server/admin/templates" = "peas_agent/lobby/server/admin/templates"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "python-multipart>=0.0.9",
]
